--- a/api/api/templates/register.html
+++ b/api/api/templates/register.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Formulário de Cadastro de Usuário</h1>
-    <form action="/cadastro" method="post">
+    <form action="/register" method="post">
         <label for="username">Usuário:</label>
         <input type="text" id="username" name="username" required><br><br>
         
